<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AggiesLand</string>
    <string name="title_section1">News</string>
    <string name="title_section2">Clubs</string>
    <string name="title_section3">Campus Map</string>
    <string name="title_section4">Bus Routes</string>
    <string name="title_section5">Special Events</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_news">News Feed</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_news_detail">News Detail</string>
    <string name="clubname">Club Name</string>
    <string name="price">Price</string>
    <string name="address">Address </string>
    <string name="detail">Details</string>
    <string name="title_activity_clubs">Club Events</string>
    <string name="title_clubs_detail">Party Event Details</string>

    <!-- Login Screen String Credentials -->


    <!-- <string name="action_sign_in_short">Sign In</string> -->
    <string name="orText">OR</string>
    <!-- <string name="action_register">Register</string> -->
    <string name="usernameHint">Username</string>

    <!-- Signup Screen String Credentials -->

    <string name="emailHint">Email</string>
    <string name="passwordHint">Password</string>
    <string name="confirmPasswordHint">Re-Enter Password</string>
    <string name="createAccount">Create Account</string>
    <string name="date">Date</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="title_activity_campus_events">Campus Events</string>
    <string name="title_activity_my">MyActivity</string>

</resources>
