<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@drawable/background"
    android:alpha=".85">

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/usernameHint"
        android:inputType="text"
        android:maxLength="15"
        android:textColor="#ffffff"
        android:layout_above="@+id/etEmail"
        android:layout_alignLeft="@+id/etEmail"
        android:layout_alignStart="@+id/etEmail" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/emailHint"
        android:inputType="textEmailAddress"
        android:textColor="#ffffff"
        android:layout_above="@+id/etPassword"
        android:layout_alignLeft="@+id/etPassword"
        android:layout_alignStart="@+id/etPassword" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/passwordHint"
        android:inputType="textPassword"
        android:maxLength="10"
        android:textColor="#ffffff"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/etPasswordConfirm"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:hint="@string/confirmPasswordHint"
        android:inputType="textPassword"
        android:textColor="#ffffff"
        android:layout_below="@+id/etPassword"
        android:layout_alignLeft="@+id/etPassword"
        android:layout_alignStart="@+id/etPassword"
        android:alpha=".87" />

    <Button
        android:id="@+id/btnCreateAccount"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/signup"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="42dp"
        android:id="@+id/imageView"
        android:src="@drawable/logo_large"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="26dp" />

</RelativeLayout>